# TournamentOwl

./: README.md
owl-backend/: .gitignore  Dockerfile  Justfile  README.md  compose.yaml  manage.py  pyproject.toml
owl-backend/scripts/: generate_dummies.py
owl-backend/tournament_owl/: asgi.py  urls.py  wsgi.py
owl-backend/tournament_owl/settings/: base.py  prod.py
owl-backend/tournaments/: admin.py  factories.py  models.py  serializers.py  urls.py  views.py
owl-backend/tournaments/migrations/: 0001_initial.py
owl-frontend/: index.html  package-lock.json  package.json
owl-frontend/src/: App.jsx
owl-frontend/src/components/: BottomBar.jsx  CustomTournamentGrid.jsx  NavigationBar.jsx  PageLayout.jsx  TournamentGrid.jsx
owl-frontend/src/data/: pages.jsx
owl-frontend/src/pages/: HomePage.jsx  JudgesPage.jsx  ParticipantsPage.jsx  RegistrationPage.jsx  ResourcesPage.jsx  TournamentsPage.jsx
